# python-web-example

./: README.md  flake.nix  pyproject.toml
python_web/: app.py
