[project]
name = "python-web-example"
version = "0.1.0"
description = "A simple Flask web app with PostgreSQL connection"
authors = [
    { name = "Ivan Mincik", email = "ivan.mincik@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "flask",
    "psycopg2",
]

[project.urls]
Homepage = "https://github.com/imincik/python-web-example"
Source = "https://github.com/imincik/python-web-example"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
python-web = "python_web:app.main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

